# agent-os

./: .gitignore  CHANGELOG.md  README.md  WORKER.md  config.yml  demo.py  pyproject.toml
.agent-os/memory/: session-memory.md
.github/workflows/: ci.yml
agentos/: __init__.py  orchestrator.py
agentos/context/: context_manager.py
agentos/core/: session.py
agentos/git/: git_system.py
agentos/github/: __init__.py  github_integration.py
agentos/healing/: self_healing.py
agentos/mcp/: __init__.py  mcp_manager.py
agentos/memory/: session_memory.py
agentos/tools/: tool_system.py
agentos/unknown_task/: __init__.py  (+8 more)
docs/: ARCHITECTURE-DIAGRAM.md  ARCHITECTURE-PATTERNS.md  COMPLETE-SYSTEM-INTEGRATION.md  CONCEPTS.md  CONTRIBUTING.md  FILE-STRUCTURE.md  GETTING-STARTED.md  GIT-GITHUB-ARCHITECTURE.md  INSTALLATION.md  INTEGRATION.md  MCP-TOOL-SELFHEAL-ARCHITECTURE.md  SESSION-MEMORY-ARCHITECTURE.md  SKILLS.md  STANDARDS.md  UNKNOWN-TASK-HANDLING-FRAMEWORK.md  WORKFLOW.md  skill-analysis.md  workflow-engine-report.md
engines/: README.md  adaptation_layer.py  capability_registry.py  execution_engine.py  task_classifier.py  workflow-engine.py  workflow_composer.py  workflow_metrics.py  workflow_rollback.py  workflow_validator.py
registry/: capability-registry.json
scripts/: install-base.ps1  install-base.sh  project-install.ps1  project-install.sh  uninstall.ps1  uninstall.sh
templates/: README.md  profile-template.md  skill-template.md  standard-template.md
tests/: test_adaptation_layer.py  test_capability_registry.py  test_execution_engine.py  test_task_classifier.py  test_workflow_composer.py
(+60 files in other folders)
